Corregir .gitignore y preparar para ignorar archivos de compilación y datos

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,2 @@
-emergency_history.json
-# Compiled files
-*.class
-
-# Output folders
-out/
-SistemaEmergencias/out/
-SistemaEmergencias/SistemaEmergencias/out/
-
-# IDE
-.idea/
-*.iml
-
-# OS
-.DS_Store
+sources.txt
+javac
